# pypace

./: .gitignore  authors.md  license  onepace_file_organizer.py  pyproject.toml  readme.md  requirements.txt
onepace_file_organizer/: organizer.py
pypace/: cli.py  data.py  models.py  organizer.py
tests/: test_arc.py  test_episode.py  test_saga.py  utils.py
