[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypace"
version = "0.1.0"
description = "A CLI tool to organize One Pace files into sagas and arcs."
authors = [ { name = "Thendo A Munyai", email = "Amonmunyai11@gmail.com" } ]
license = { text = "MIT" }
readme = "readme.md"
dependencies = ["colorama>=0.4.6"]

[project.scripts]
pypace = "pypace.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-mock>=3.0"
]
